src/objects/Execution_Plan_Contact_Joiner__c.object
<CustomObject>
    <description>Allows many contacts to be associated to an Execution Plan</description>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Execution Plan Contact</relationshipLabel>
        <relationshipName>Execution_Plan_Contact_Joiner</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Execution_Plan_Influence__c</fullName>
        <label>Execution Plan Influence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Plan__c</fullName>
        <label>Execution Plan</label>
        <referenceTo>ExecutionPlan__c</referenceTo>
        <relationshipName>Execution_Plan_Contact_Joiner</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Execution Plan Contact</label>
    <nameField>
        <displayFormat>EPCJ - -{00000000}</displayFormat>
        <label>Execution Plan Contact Joiner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Execution Plan Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>